Flekschas/micro fixes (#718)
* Improve error message

* Add missing bounded function

* Update changelog

* Remove unused file

* Don't rely on rem as that unit might change

E.g., higlass-app has a different base font-size

* Same as last commit

* Fix overflowing add track modal

* Update changelog

--- a/app/styles/Dialog.module.scss
+++ b/app/styles/Dialog.module.scss
@@ -1,4 +1,5 @@
 @import './colors';
+@import './sizes';
 @import './transitions';
 
 .dialog-header {
@@ -6,45 +7,51 @@
   z-index: 2;
   display: flex;
   justify-content: space-between;
-  margin: 0 -1rem 1rem -1rem;
-  padding: 0 1rem 1rem 1rem;
+  margin: 0 (-1*$base)+px $base+px (-1*$base)+px;
+  padding: 0 $base+px $base+px $base+px;
   border-bottom: 1px solid $gray-light;
 
   h3 {
     margin: 0;
     padding: 0;
-    font-size: 2rem;
+    font-size: (2*$base)+px;
     line-height: 1em;
   }
 
   button {
-    font-size: 1rem;
+    font-size: $base+px;
   }
 }
 
 .dialog-main-max-height {
   position: absolute;
   z-index: 1;
-  top: 4rem;
+  top: (4*$base)+px;
   right: 0;
-  bottom: 5rem;
+  bottom: (5*$base)+px;
   left: 0;
-  padding: 1rem;
+  padding: $base+px;
   overflow: auto;
 }
 
 .dialog-footer, .dialog-footer-max-height {
   display: flex;
   justify-content: space-between;
-  margin: 1rem -1rem 0 -1rem;
-  padding: 1rem 1rem 0 1rem;
+  margin: $base+px (-1*$base)+px 0 (-1*$base)+px;
+  padding: $base+px $base+px 0 $base+px;
   border-top: 1px solid $gray-light;
+}
+
+.dialog-footer, .dialog-footer-max-height {
+  button {
+    font-size: (1.4*$base)+px;
+  }
 }
 
 .dialog-footer-max-height {
   position: absolute;
   z-index: 2;
-  left: 1rem;
-  right: 1rem;
-  bottom: 1rem;
+  left: $base+px;
+  right: $base+px;
+  bottom: $base+px;
 }
